tests/integration/per_document_grammar/validation/06_gef_reference_type_not_allowed/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK:error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Requirement field of type Reference has an unsupported Reference Type item: FileReference(parent = REFS, file_entry = FileEntry(parent = FileReference, file_format = None, file_path = /tmp/sample1.cpp, path_forward_slashes = /tmp/sample1.cpp, path_normalized = {{[\/\\]tmp[\/\\]sample1.cpp}}))
CHECK:Location: {{.*}}input.sdoc:18:1
CHECK:Hint: Problematic field: REFS. Compare with the document grammar: [UID, REFS] for type: LOW_LEVEL_REQUIREMENT
CHECK:error: Parallelizer: One of the child processes has exited prematurely.
